@@ -5,8 +5,11 @@ eglibc (2.9-27) UNRELEASED; urgency=low
     bug#544389.
 
   [ Samuel Thibault ]
-  * debian/debhelper.in/libc.install: Install libc/*-gnu/ instead of
+  * debian/debhelper.in/libc.install: Install libc/*-gnu*/ instead of
     libc/*-*-gnu*/, to fix FTBFS on hurd-i386 due to it now being i486-gnu/.
+
+  [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision 2772 (from glibc-bsd).
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 31 Aug 2009 22:15:07 +0200
 
